Headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodbservice-headless
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
