nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-service-nodePort
spec:
  type: nodePort
  selector:
    app: mongodb
  ports:    
    - protocol: TCP
      port: 3200
      targetPort: 3000
      nodePort: 30008
